# LinResSims

./: .gitignore  README.md  install.sh  pyproject.toml
LinResSim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
container/: Dockerfile  linressim.def  linressims.def
input_files/: Initializer.txt  Observables.txt  OmicsData.txt  Species_mgs.txt  formula_obs_0.txt  ic_RasRaf.txt  ic_k1813.txt
jupyter_notebooks/: Fast-Slow-Cycling-Lineages.ipynb  Tyson model growth curve.ipynb  figure_1c.ipynb  figure_2abc.ipynb  figure_2defg.ipynb
output/: README.md
scripts/: analysis_death.py  analysis_grplots.py  analysis_grscore.py  analysis_linres.py  analysis_obsplots.py  analysis_popdyn.py  cellpop.py  cellpop_drs.py  cellpop_drs3.py  cellpop_drs_debug.py  cellpop_drs_demo.py  cellpop_drs_plotting_clean.py  cellpop_new.py  createModel.py  createModel_hpc.py  update_json.py
setup/: environment.yml  gr_metrics.yml
sim_configs/: README.md  default.json  default_SPARCED.json  drs_SPARCED.json
slurm_files/: compile-container.sh  figure_2defg.sh  new-container.sh  reproducing-all-drs-sims.sh  run-container.sh
