[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LinResSim"
version = "1.0"
description = "A simple and efficient pipeline for constructing, merging, expanding and simulating large-scale, single-cell mechanistic models."
authors = [
    { name = "Arnab Mutsuddy", email = "Arnab.mutsuddy@gmail.com" },
    { name = "Jonah Huggins", email = "JonahRileyHuggins@gmail.com" },
    { name = "Aurore Amrit", email = "aurore.amrit@umu.se" },
    { name = "Cemal Erdem", email = "Cemal.erdem@umu.se" },
    { name = "Jon C. Calhoun", email = "jonccal@clemson.edu" },
    { name = "Marc Birtwistle", email = "marc.birtwistle@gmail.com" }
]
license = {text = "GPL-2.0"}
dependencies = [
    "h5py==3.11",
    "numpy==1.22.4",
    "scipy==1.12.0",
    "sympy==1.12",
    "pandas==2.2.1",
    "matplotlib==3.8.0",
    "python-libsbml==5.18.0",
    "swig==4.0.0",
    "amici==0.11.12",
    "antimony==2.12.0.1",
    "pyyaml==6.0.1",
    "mpi4py==3.1.6",
    "phrasedml==1.3.0",
    "lxml==5.3.0",
    "biopython==1.81",
    "plotly==5.15", 
    "seaborn==0.11.2",
    "ipykernel==6.29.5"
]
requires-python = ">=3.10"
keywords = ["mechanistic modeling", "single-cell models", "simulation", "systems biology"]

readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/SPARCED/LinResSim/"
Repository = "https://github.com/SPARCED/LinResSim/"

[tool.setuptools.packages]
find = { where = ["scripts", "bin"], include = ["bin*", "scripts*"], exclude = ["container*", "input_files*", "output*", "setup*", "sim_configs*", "jupyter_notebooks*"] }